<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>

    <string name="btn_search_main">Поиск</string>
    <string name="btn_library_main">Медиатека</string>
    <string name="btn_setup_main">Настройки</string>

    <string name="setup_2_option">Поделиться приложением</string>
    <string name="setup_1_option">Темная тема</string>
    <string name="setup_3_option">Написать в поддержку</string>
    <string name="setup_4_option">Пользовательское соглашение</string>

    <string name="setup_head">Настройки</string>
    <string name="search_head">Поиск</string>
    <string name="search_view_hint">Поиск</string>

    <string name="app_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="app_share_header">Поделиться приложением</string>

    <string name="callSupportDefaultMessage">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="callSupportDefaultSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="callSupportChooserHeader">Написать в поддержку</string>
    <string name="supportEmail">andrei.urich@yandex.ru</string>

    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_error_message">Ничего не нашлось</string>
    <string name="server_error_message">Проблема со связью.\n \nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_button_text">Обновить</string>
    <string name="search_history_header">Вы искали</string>
    <string name="clear_history_btn_text">Очистить историю</string>
    <string name="player_track_time">Длительность</string>
    <string name="player_collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="primary_genre_name">Жанр</string>
    <string name="player_country">Страна</string>
    <string name="blankTimer">00:00</string>
    <string name="library_screen_title">Медиатека</string>
    <string name="favorite_tracks_empty_placeholder_text">Ваша медиатека пуста</string>
    <string name="empty_playlists_placeholder_text">Вы не создали\n ни одного плейлиста</string>
    <string name="playlists_button_addPlaylist">Новый плейлист</string>
    <string name="favorite_tracks_tab_title">Избранные треки</string>
    <string name="playlists_tab_title">Плейлисты</string>
    <string name="bottom_nav_menu_item_1_title">Поиск</string>
    <string name="bottom_nav_menu_item_2_title">Медиатека</string>
    <string name="bottom_nav_menu_item_3_title">Настройки</string>
    <string name="createPlaylistFragmentHeader">Новый плейлист</string>
    <string name="new_playlist_name">Название*</string>
    <string name="new_playlist_description">Описание</string>
    <string name="create_playlist_button">Создать</string>
    <string name="permission_WRITE_EXTRNAL_STORAGE_rationale">Разрешение на доступ к внутренней памяти телефона необходимо для хранения обложек ваших плейлистов</string>
    <string name="on_exit_add_playlist_screen_dialog_title">Завершить создание плейлиста?</string>
    <string name="on_exit_add_playlist_screen_dialog_neutralButton">Отмена</string>
    <string name="on_exit_add_playlist_screen_dialog_positiveButton">Завершить</string>
    <string name="on_exit_add_playlist_screen_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="toast_playlist_created_message_part1">Плейлист </string>
    <string name="toast_playlist_created_message_part2"> создан</string>
    <string name="bottom_sheet_title_add_to_playlist">Добавить в плейлист</string>
    <string name="audioplayer_add_to_playlist_message_false">Трек уже добавлен в плейлист</string>
    <string name="audioplayer_add_to_playlist_message_true">Добавлено в плейлист</string>
    <string name="add_to_created_playlist_message">Добавлено в плейлист</string>
    <string name="menu_playlist_option1">Поделиться</string>
    <string name="menu_playlist_option2">Редактировать информацию</string>
    <string name="menu_playlist_option3">Удалить</string>
    <string name="empty_playlist_textview">В этом плейлисте нет треков</string>
    <string name="empty_playlist_duration">0 минут</string>
    <string name="empty_playlist_tracks_count">0 треков</string>
    <string name="empty_playlist_share_warning">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist_dialog">Хотите удалить плейлист</string>
    <string name="delete_playlist_dialog_positive">Да</string>
    <string name="delete_playlist_dialog_negative">Нет</string>
    <string name="delete_track_dialog">Хотите удалить трек?</string>
</resources>