<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen"
    android:orientation="vertical"
    android:paddingLeft="@dimen/screen_padding"
    android:paddingRight="@dimen/screen_padding"
    android:paddingBottom="@dimen/screen_padding"
    android:paddingTop="@dimen/screen_top_padding"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/app_name"
        android:textColor="@color/text_dark_primary"
        android:textSize="@dimen/h1"
        android:layout_marginBottom="24dp"

        />

    <Button
        android:id="@+id/btn_Search"
        style="@style/main_btn_style"
        android:text="@string/btn_search_main"
        app:icon="@drawable/ic_search" />


    <Button
        android:id="@+id/btn_Library"
        style="@style/main_btn_style"
        android:text="@string/btn_library_main"
        app:icon="@drawable/ic_mediateka" />

    <Button
        android:id="@+id/btn_Setup"
        style="@style/main_btn_style"
        android:text="@string/btn_setup_main"
        app:icon="@drawable/ic_setup" />


</androidx.appcompat.widget.LinearLayoutCompat>
