<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <!-- Тулбар -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbSearch"
        style="@style/my_toolbar"
        app:title="@string/search_head"
        app:titleTextAppearance="@style/my_toolbar"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/flSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/search_view_margin_top"
        android:background="@drawable/edittext_bg"
        app:layout_constraintTop_toBottomOf="@+id/tbSearch">


        <!-- Поисковая строка -->

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/search_edittext_right_margin"

            android:background="@null"

            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="@dimen/btn_icon_padding"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search_view_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"

            android:paddingHorizontal="@dimen/search_view_padding_horizontal"
            android:paddingVertical="@dimen/search_view_padding_vertical"
            android:singleLine="true"

            android:textColor="@color/search_view_text"
            android:textColorHint="@color/search_view_hint"
            android:textCursorDrawable="@drawable/cursor_search"
            android:textSize="@dimen/h2"

            />

        <ImageView
            android:id="@+id/ivClearButton"
            android:layout_width="@dimen/search_clear_button_width"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:clickable="true"
            android:paddingHorizontal="@dimen/search_clear_button_pudding_horizontal"
            android:paddingVertical="@dimen/search_clear_button_pudding_vertical"
            android:visibility="gone"
            app:srcCompat="@drawable/clear_button"

            />


    </FrameLayout>

    <!-- Вывод истории и рез-в поиска списка -->

    <LinearLayout
        android:id="@+id/listLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/head_history_margin_top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flSearch"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:id="@+id/searchHistoryHeader"
            style="@style/search_history_header_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/history_header_margin_bottom"
            android:text="@string/search_history_header"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/search_result_top_margin"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/historyClearButton"
            style="@style/refresh_btn_style"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/clear_history_button_margin_top"
            android:text="@string/clear_history_btn_text"
            android:visibility="gone" />


    </LinearLayout>

    <!-- Плейсхолдер под нулевой результат -->

    <LinearLayout
        android:id="@+id/placeholderSearchError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:visibility="gone"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flSearch">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/search_placeholder_image_margin_top"
            android:src="@drawable/placeholder_search_error" />

        <TextView
            style="@style/search_screen_placeholder_text_style"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/search_result_top_margin"
            android:text="@string/search_error_message" />
    </LinearLayout>


    <!-- Плейсхолдер под ошибку сервера -->

    <LinearLayout
        android:id="@+id/placeholderServerErrors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flSearch">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/search_placeholder_image_margin_top"
            android:src="@drawable/placeholder_server_error" />

        <TextView
            style="@style/search_screen_placeholder_text_style"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/search_result_top_margin"
            android:text="@string/server_error_message" />

        <Button
            android:id="@+id/btnRefresh"
            style="@style/refresh_btn_style"
            android:layout_marginTop="@dimen/refresh_button_margin_top"
            android:text="@string/refresh_button_text" />

    </LinearLayout>

    <!-- Прогресс-бар -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progress_bar_dim"
        android:layout_height="@dimen/progress_bar_dim"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/progress_bar_margin_top"
        android:indeterminateTint="@color/search_cursor_color"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flSearch"

        />


</androidx.constraintlayout.widget.ConstraintLayout>





