<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svAddPlaylist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:fillViewport="true"
    tools:context=".ui.library.AddPlaylistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addPlConstrLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbCreatePlaylist"
            style="@style/player_toolbar"
            app:layout_constraintHorizontal_bias="0.0"
            app:title="@string/createPlaylistFragmentHeader"
            app:titleTextAppearance="@style/my_toolbar"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/playlistImage"
            style="@style/player_border_for_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_track_image_margin_top"
            android:clickable="true"
            android:src="@drawable/create_playlist_img"
            app:layout_constraintTop_toBottomOf="@id/tbCreatePlaylist"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etvNamePlaylist"
            style="@style/new_playlist_TextInput_style"
            android:layout_marginTop="@dimen/new_playlist_edittext_margin_top"
            android:hint="@string/new_playlist_name"

            android:paddingBottom="@dimen/create_playlist_padding_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlistImage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNamePlaylist"
                style="@style/edit_text_add_playlist_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etvDescriptionPlaylist"
            style="@style/new_playlist_TextInput_style"
            android:layout_marginTop="@dimen/new_playlist_edittext_margin_between"
            android:hint="@string/new_playlist_description"
            android:paddingBottom="@dimen/create_playlist_padding_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etvNamePlaylist">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescriptionPlaylist"
                style="@style/edit_text_add_playlist_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btnCreatePlaylist"
            app:layout_constraintTop_toBottomOf="@id/etvDescriptionPlaylist" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreatePlaylist"
            style="@style/new_playlist_btn_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/new_playlist_button_height"
            android:layout_marginHorizontal="@dimen/new_playlist_button_horizontal_margin"
            android:layout_marginVertical="@dimen/new_playlist_margin_bottom"
            android:clickable="false"
            android:text="@string/create_playlist_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>