<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.library.CreatePlaylistFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbCreatePlaylist"
        style="@style/player_toolbar"
        app:layout_constraintHorizontal_bias="0.0"
        app:title="@string/createPlaylistFragmentHeader"
        app:titleTextAppearance="@style/my_toolbar"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/playlistImage"
        style="@style/player_border_for_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/player_track_image_margin_top"
        android:src="@drawable/create_playlist_img"
        app:layout_constraintTop_toBottomOf="@id/tbCreatePlaylist"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etvNamePlaylist"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/text_primary"

        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/new_playlist_name"
        app:layout_constraintTop_toBottomOf="@id/playlistImage">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etvDescriptionPlaylist"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/text_primary"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/new_playlist_description"
        app:layout_constraintTop_toBottomOf="@id/etvNamePlaylist">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreatePlaylist"

        style="@style/playlist_btn_style"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:text="Создать"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>