<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!-- Хедер экрана -->

    <ImageView
        android:id="@+id/iv_Back"
        android:layout_width="@dimen/minButtonHeight"
        android:layout_height="@dimen/minButtonHeight"
        android:layout_margin="@dimen/settings_head_margin"
        android:clickable="true"
        android:padding="@dimen/screen_padding_small"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/back_arrow" />

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/minButtonHeight"
        android:layout_marginVertical="@dimen/settings_head_margin"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/screen_padding_small"
        android:text="@string/setup_head"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/h1"
        app:layout_constraintStart_toEndOf="@+id/iv_Back"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- первый пункт меню  -->

    <TextView
        android:id="@+id/tv_option1"
        style="@style/settings_option_text_style"

        android:layout_marginTop="@dimen/settings_header_margin_bottom"

        android:text="@string/setup_1_option"

        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintRight_toLeftOf="@id/space_settings1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_head" />

    <Space
        android:id="@+id/space_settings1"
        android:layout_width="0dp"
        android:layout_height="@dimen/setup_options_height"

        android:layout_marginTop="@dimen/settings_header_margin_bottom"

        app:layout_constraintLeft_toRightOf="@id/tv_option1"
        app:layout_constraintRight_toLeftOf="@id/swtch"
        app:layout_constraintTop_toBottomOf="@+id/tv_head"
        >
    </Space>

    <Switch
        android:id="@+id/swtch"
        android:layout_width="56dp"
        android:layout_height="@dimen/setup_options_height"
        android:layout_gravity="center_vertical"
        android:checked="false"
        android:layout_marginRight="@dimen/settings_switch_right_margin"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_option1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space_settings1"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <!-- второй пункт меню -->

    <TextView
        android:id="@+id/tv_option2"
        style="@style/settings_option_text_style"
        android:text="@string/setup_2_option"

        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintRight_toLeftOf="@id/space_settings2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_option1"

        />
    <Space
        android:id="@+id/space_settings2"
        android:layout_width="0dp"
        android:layout_height="@dimen/setup_options_height"

        app:layout_constraintLeft_toRightOf="@id/tv_option2"
        app:layout_constraintRight_toLeftOf="@id/iv_option2"
        app:layout_constraintTop_toBottomOf="@+id/tv_option1"
        >
    </Space>

    <ImageView
        android:id="@+id/iv_option2"
        style="@style/settings_option_image_style"
        android:src="@drawable/ic_share"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/space_settings2"
        app:layout_constraintTop_toBottomOf="@+id/swtch" />

    <!-- Третий пункт меню  -->

    <TextView
        android:id="@+id/tv_option3"
        style="@style/settings_option_text_style"
        android:text="@string/setup_3_option"

        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintRight_toLeftOf="@id/space_settings3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_option2"


        />

    <Space
        android:id="@+id/space_settings3"
        android:layout_width="0dp"
        android:layout_height="@dimen/setup_options_height"

        app:layout_constraintLeft_toRightOf="@id/tv_option3"
        app:layout_constraintRight_toLeftOf="@id/iv_option3"
        app:layout_constraintTop_toBottomOf="@+id/tv_option2"
        >
    </Space>

    <ImageView
        android:id="@+id/iv_option3"
        style="@style/settings_option_image_style"
        android:src="@drawable/ic_support"



        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/space_settings3"
        app:layout_constraintTop_toBottomOf="@+id/iv_option2" />

    <!-- Четвертый пункт меню -->

    <TextView
        android:id="@+id/tv_option4"
        style="@style/settings_option_text_style"
        android:text="@string/setup_4_option"

        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintRight_toLeftOf="@id/space_settings4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_option3"

        />

    <Space
        android:id="@+id/space_settings4"
        android:layout_width="0dp"
        android:layout_height="@dimen/setup_options_height"

        app:layout_constraintLeft_toRightOf="@id/tv_option4"
        app:layout_constraintRight_toLeftOf="@id/iv_option4"
        app:layout_constraintTop_toBottomOf="@+id/tv_option3"
        >
    </Space>

    <ImageView
        android:id="@+id/iv_option4"
        style="@style/settings_option_image_style"
        android:src="@drawable/ic_arrow_frwrd"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/space_settings4"
        app:layout_constraintTop_toBottomOf="@+id/iv_option3" />


</androidx.constraintlayout.widget.ConstraintLayout>